# mining-drs

./: .coverage  .gitignore  Concentrator_Module_Graph.md  GOAL.md  PLAN.md  README.md  RESEARCH_IDEAS.md  TODO.md  capacity_policy_comparison.csv  capacity_policy_comparison_summary.csv  interactive_concentrator_modes.html  interactive_topology.html  parse_xlsx.py  pyproject.toml  pytest.ini  test_kroki.py  topology.md  xlsx_out.txt
design/: 0001-use-object-oriented-new-types.md  0002-dataclass-configuration.md  0003-simulation-loop-engine-tick.md  0004-modes-and-sequence-registry.md  0005-formula-parser.md  0006-ore-body-model-spatial-correlation.md  0007-telemetry-and-output-statistics.md  0008-beautiful-plots-with-matplotlib.md  0008-beautiful-plots-with-plotly.md
drs/: __init__.py  config.py  data.py  data_source.py  engine.py  execution_context.py  flow.py  modes.py  module.py  network.py  plot.py  telemetry.py  variables.py  visualizer.py
drs/vis/: __init__.py  module_graph.py
examples/: MiningSystemDRS_Compliment_v4.txt  example_mine.py  example_mine_original.py  example_mine_rl.py
examples/tutorial/: 01_getting_started.py
mining_drs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
papers/: GLOSSARY.md  README.md
src/: TODO.md
src/mining_drs/: earth.py  (+10 more)
src/mining_drs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: README.md  conftest.py  test_config.py  test_earth.py  test_engine.py  test_modes.py  test_module.py  test_navarra_arena_semantics.py  test_parser.py  test_plot.py  test_telemetry.py  test_variables.py
(+51 files in other folders)
