[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mining_drs"
version = "0.1.0"
description = "A dynamic simulation engine for mining operations."
authors = [
    { name = "mining-drs Team" }
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.0",
    "numpy>=1.20",
    "plotly>=5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[tool.setuptools.packages.find]
where = ["src"]
