[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mining_drs"
version = "0.1.0"
description = "A dynamic simulation engine for mining operations."
authors = [
    { name = "mining-drs Team" }
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.0",
    "numpy>=1.20",
    "matplotlib>=3.5",
    "gstools>=1.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark"
]

[tool.setuptools.packages.find]

[tool.coverage.run]
source = ["drs", "components", "rl"]
omit = [
    "tests/**",
    "examples/**",
    "**/__init__.py",
]

[tool.coverage.report]
omit = [
    "tests/**",
    "examples/**",
    "**/__init__.py",
]
